find bugs bug fixes